--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-Siyona Slayzz
+<!DOCTYPE HTML>
+<html>
+    <head>
+        <title>Challenge: Write a Poem</title>
+        <meta charset="utf-8">
+    </head>
+    <body>
+    
+    <h1>My turtle fred</h1>
+
+
+<p> My turtle fred.
+He is dead.<br>
+He likes eating,reading,sleeping,on a bed.<br>
+But turtle sad that he wasn't fed.<br>
+But till this day his story never ends.<br>
+His favorite toy was a monkey and a red.<br>
+To play with him was a competition till the end.
+ 
+    </p>
+
+    </body>
+    
+</html>
