--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     </head>
     <body>
     
-    <h1>Tennis Origine</h1>
+    <h1>Tennis Origin</h1>
 
 
 <p>.
--Tennis was made in 1873 by Major Walter Clopton He published the first book of rules that year and took out a patent on his game in 1874.The origins of the game can be traced to a 12th–13th-century French handball game called jeu de paume.Tennis has roots back to the ancient Mediterranean, but it was truly popularized in the 11th and 12th centuries when monks and members of French court took a liking to the game. 
+Tennis is a racket sport that is played either individually against a single opponent (singles) or between two teams of two players each (doubles). Each player uses a tennis racket strung with a cord to strike a hollow rubber ball covered with felt over or around a net and into the opponent's court. The object is to manoeuvre the ball in such a way that the opponent is not able to play a valid return. If a player is unable to return the ball successfully, the opponent scores a point
 
  
     </p>
